--- a/conf/gpt2-mistral-pixelfly-small.yaml
+++ b/conf/gpt2-mistral-pixelfly-small.yaml
@@ -7,7 +7,7 @@
 # Inherit Dataset, Tokenization, Model, and Training Details
 inherit:
     - datasets/wikitext103.yaml
-    - models/gpt2-small.yaml
+    - models/gpt2-pixelfly-small.yaml
     - trainers/gpt2-small.yaml
 
 # Run ID -- make sure to override!
